; ModuleID = '/home/carl/AnghaBench/git/extr_sha1-array.c_oid_array_for_each.c'
source_filename = "/home/carl/AnghaBench/git/extr_sha1-array.c_oid_array_for_each.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.oid_array = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @oid_array_for_each(%struct.oid_array* %0, i32 (i64, i8*)* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.oid_array*, align 8
  %6 = alloca i32 (i64, i8*)*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.oid_array* %0, %struct.oid_array** %5, align 8
  store i32 (i64, i8*)* %1, i32 (i64, i8*)** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 0, i32* %8, align 4
  br label %10

10:                                               ; preds = %31, %3
  %11 = load i32, i32* %8, align 4
  %12 = load %struct.oid_array*, %struct.oid_array** %5, align 8
  %13 = getelementptr inbounds %struct.oid_array, %struct.oid_array* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = icmp slt i32 %11, %14
  br i1 %15, label %16, label %34

16:                                               ; preds = %10
  %17 = load i32 (i64, i8*)*, i32 (i64, i8*)** %6, align 8
  %18 = load %struct.oid_array*, %struct.oid_array** %5, align 8
  %19 = getelementptr inbounds %struct.oid_array, %struct.oid_array* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = load i32, i32* %8, align 4
  %22 = sext i32 %21 to i64
  %23 = add nsw i64 %20, %22
  %24 = load i8*, i8** %7, align 8
  %25 = call i32 %17(i64 %23, i8* %24)
  store i32 %25, i32* %9, align 4
  %26 = load i32, i32* %9, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %16
  %29 = load i32, i32* %9, align 4
  store i32 %29, i32* %4, align 4
  br label %35

30:                                               ; preds = %16
  br label %31

31:                                               ; preds = %30
  %32 = load i32, i32* %8, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %8, align 4
  br label %10

34:                                               ; preds = %10
  store i32 0, i32* %4, align 4
  br label %35

35:                                               ; preds = %34, %28
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
